--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.1.3",
+    "jest": "^27.4.7",
     "prettier": "^2.5.1"
   }
 }
